Use records for JobCreation classes